criado parcialmente controler de table e alterado QRcode de aleatorio simples para UUID
